// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-imWYAI fLZoZn sc-dhKdcB lapPam r5-widget"
    transition="entering"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div
        id="email-registering-credential"
      >
        <div
          class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
        >
          mfa.email.explain
        </div>
        <form
          class="sc-ikkxIA dcGBJp"
          novalidate=""
        >
          <button
            class="sc-kpDqfm izDDoy"
            data-testid="submit"
            type="submit"
          >
            mfa.register.email
          </button>
        </form>
      </div>
      <div
        class="sc-iGgWBj fIbmkT"
      >
        <span>
          or
        </span>
      </div>
      <div
        id="phone-number-registering-credential"
      >
        <div
          class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
        >
          mfa.phoneNumber.explain
        </div>
        <form
          class="sc-ikkxIA dcGBJp"
          novalidate=""
        >
          <div
            class="sc-jEACwC liiTZm"
            required=""
          >
            <label
              class="sc-jlZhew jwHbOB"
              for="phone_number"
            >
              phoneNumber
            </label>
            <input
              autocomplete="tel"
              class="sc-cPiKLX bxqNC"
              data-testid="phone_number"
              id="phone_number"
              labels="[object Object]"
              name="phone_number"
              placeholder="phoneNumber"
              required=""
              type="tel"
              value=""
            />
          </div>
          <button
            class="sc-kpDqfm izDDoy"
            data-testid="submit"
            type="submit"
          >
            mfa.register.phoneNumber
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-imWYAI fLZoZn sc-dhKdcB lapPam r5-widget"
    transition="entering"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div>
        <form
          class="sc-ikkxIA dcGBJp"
          novalidate=""
        >
          <button
            class="sc-kpDqfm kpWHYP"
            type="submit"
          >
            mfa.remove.email
          </button>
        </form>
      </div>
      <div
        class="sc-iGgWBj fIbmkT"
      >
        <span>
          or
        </span>
      </div>
      <div>
        <form
          class="sc-ikkxIA dcGBJp"
          novalidate=""
        >
          <button
            class="sc-kpDqfm kpWHYP"
            type="submit"
          >
            mfa.remove.phoneNumber
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
